--- a/FreeCodeCamp/Tribute/index.html
+++ b/FreeCodeCamp/Tribute/index.html
@@ -4,23 +4,102 @@
     <meta charset="utf-8">
     <title>Tribute Page</title>
     <link href="styles/main.css" rel="Stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+ </head>
   </head>
   <body>
     <main id="main">
-        <div id="title">
-            <h2>Mohandas Karamchand Gandhi</h2>
-            <h5>Father of the Nation</h5>
-        </div>
+      <!-- Header -->
+      <div id="title">
+          <h2>MOHANDAS  KARAMCHAND  GANDHI</h2>
+          <h5>Father of the Nation</h5>
+      </div>
 
+    <!-- Navigation Bar -->
+    <div class="navbar">
+      <a href="#">HOME</a>
+      <a href="#time-line">TIMELINE</a>
+      <a href="#freedomstruggle">FREEDOM STRUGGLE</a>
+      <a href="#quotes">QUOTES</a>
+      <a href="#passing-away">PASSING AWAY</a>
+      <a href="#RECOGNITION">RECOGNITION</a>
+      <a href="#links">LINKS</a>
+    </div>
         <div id="img-div">
-            <img src="https://drive.google.com/uc?export=view&id=1reCb8-qOP3rIyH1zNIoj4ggEUoqBpqGn" alt="Image not found" id="image">
-            <h4 id="img-caption">Mahatma Gandhi with his famous Quote</h4>
+            <img src="Assets/images/gandhi.png" alt="Image not found" id="image">
+            <h4 id="img-caption">Mahatma Gandhi at the time of Independence.</h4>
         </div>
         <div id="tribute-info">
-            <div id="time-line">
-                <h1>Journey</h1>
-
-                <div class="content">
+        <div id="time-line">
+          <h1>Timeline</h1>
+          <table id="collage">
+            <tr>
+              <td>
+                <div class="pictures">
+                  <img src="Assets/images/birth.jpg"  alt="Image not found" id="image1">
+                <div class="text-block">
+                 <h4>Oct 2, 1869 - Birth</h4>
+                 </div>
+               </div>
+             </td>
+              <td>
+                <div class="pictures"><img src="Assets/images/Marriage.jpg"  alt="Image not found" id="image1">
+                  <div class="text-block">
+                   <h4>Jan 1, 1883 - Marriage</h4>
+                   </div>
+                </div>
+              </td>
+              <td>
+                <div class="pictures"><img src="Assets/images/lawschool.jpg"  alt="Image not found" id="image1">
+                  <div class="text-block">
+                   <h4>Sept 4, 1888 - Law School</h4>
+                   </div>
+                </div>
+              </td>
+              <td>
+                <div class="pictures"><img src="Assets/images/southafrica.jpg"  alt="Image not found" id="image1">
+                  <div class="text-block">
+                   <h4>Dec 1, 1896 - SouthAfrica</h4>
+                   </div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="pictures"><img src="Assets/images/firstprotest.jpg" alt="Image not found" id="image1">
+                  <div class="text-block">
+                   <h4>Jan 1st, 1906 - First Protest</h4>
+                   </div>
+                </div>
+              </td>
+              <td>
+                <div class="pictures"><img src="Assets/images/saltstrike.jpg" alt="Image not found" id="image1">
+                  <div class="text-block">
+                   <h4>March 12, 1930 - Saltstrike</h4>
+                   </div>
+                </div>
+              </td>
+              <td>
+                <div class="pictures"><img src="Assets/images/india.gif" alt="Image not found" id="image1">
+                  <div class="text-block">
+                   <h4>Aug 15, 1947 - Independence</h4>
+                   </div>
+                </div>
+              </td>
+              <td>
+                <div class="pictures"><img src="Assets/images/death.jpg" alt="Image not found" id="image1">
+                  <div class="text-block">
+                   <h4>Jan 30, 1948 - Passed Away</h4>
+                   </div>
+                </div>
+              </td>
+            </tr>
+          </table>
+        </div>
+            <div id="freedomstruggle">
+                <h1>Freedom Struggle</h1>
+                 <div class="content">
                     <span class="list-style"></span><div class="item"> <span class="year">1869</span>  Indian nationalist leader Gandhi (born Mohandas Karamchand Gandhi) was born in Porbandar, Kathiawar, India, which was then part of the British Empire.</div>
                 </div>
 
@@ -149,8 +228,32 @@
                     <span class="list-style last"></span><div class="item"> There is nothing that wastes the body like worry, and one who has any faith in God should be ashamed to worry about anything whatsoever.</div>
                 </div>
             </div>
-        </div>
+
+          <div id="passing-away">
+            <h1>Passing Away</h1>
+            <div class="pass"><img src="Assets/images/death.jpg" alt="Image not found" id="image2">             <p>Mahatma Gandhi was assassinated on 30 January 1948 at age 78 in the compound of Birla House (now Gandhi Smriti), a large mansion in central New Delhi. His assassin was Nathuram Vinayak Godse, a Chitpavan Brahmin from Pune, Maharashtra, a Hindu nationalist, a member of the political party, the Hindu Mahasabha, as well as a former member of the Rashtriya Swayamsevak Sangh (RSS), a right-wing Hindu paramilitary volunteer organization. Godse considered Gandhi to have been too accommodating to Muslims during the Partition of India of the previous year.</p>
+            </div>
+          </div>
+
+            <div id="RECOGNITION">
+              <h1>Recognition</h1>              <p>Mahatma Gandhi had a huge impact on history and our ethers as a nation.
+His influence is so great that till date we see his face every day on our currency And, with every region having their own famous freedom fighter and every religion having a sacred name, it would be difficult to satisfy each and everyone and keep them united, hence, Mahatma Gandhi being the ‘Father of the nation’ was decided to be featured on the currency note.</p>              <div class="pass"><img src="Assets/images/currency.jpg" alt="Image not found" id="image3">
+              </div>
+
+          </div>
+          </div>
+
+
+          <div id="links">
+            <h1>Links</h1>              <p>Mahatma Gandhi had a huge impact on history and our ethers as a nation.
+          His influence is so great that till date we see his face every day on our currency And, with every region having their own famous freedom fighter and every religion having a sacred name, it would be difficult to satisfy each and everyone and keep them united, hence, Mahatma Gandhi being the ‘Father of the nation’ was decided to be featured on the currency note.</p>              <div class="pass"><img src="Assets/images/currency.jpg" alt="Image not found" id="image3">
+            </div>
+
+          </div>
+          </div>
         <a href="https://en.wikipedia.org/wiki/Mahatma_Gandhi" target="_blank" id="tribute-link">Read More about Mahatma Gandhi</a>
 </main>
+
   </body>
+
 </html>
